docs(api): add admin tags and paths
